# ai-bootcamp

./: README.md  pyproject.toml  summary.txt
capstone_project/: agents.py  main.py  project.py  tools.py
capstone_project/tests/: test_llm_judge.py
week1/: env-test.ipynb  final_answers.md  github_helper.py  homework.py  project1-build-faq-assistant-with-rag.ipynb
week2/: final_answers.md  final_answers.txt  homework.py  openai-agent-with-function-calls.ipynb  openai-agents-sdk.ipynb  toyai-agent.py
week3/: final_answers.md
week3/logs/: orchestrator_20251122_164531_ff8de1.json
week3/tests/: test_agent.py
week3/wikiagent_/: agent_logging.py  main.py  tools.py  wikiagent.py
